--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,18 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - HeyIAlreadyDidThat",
+            "request": "launch",
+            "mainClass": "HeyIAlreadyDidThat"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - MinionLaborShifts",
+            "request": "launch",
+            "mainClass": "MinionLaborShifts"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - moop",
             "request": "launch",
             "mainClass": "moop"
